--- a/index.html
+++ b/index.html
@@ -31,6 +31,128 @@
       <h3>The Conjuring 2</h3>
       <p> Jedan od najboljih filmova koje sam pogledao</p>
       <h3>The Conjuring: The Devil Made Me Do It</h3>
-      <P> puno bolje gledat s gljivama</P>
+      <P> </P>
+
+      <!-- oblikovanje teksta -->
+       <p>  Mi smo <strong> 3.E razred</strong>. Idemo u <em>Tehničku školu </em>. <mark> Razrednik</mark> nam je <sub> prof. </sub> <sup> Benić</sup>. Ima nas <del>24</del> 26 u razredu. </p>
+       <pre>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Dolor ea necessitatibus in 
+        accusantium rem sint aliquid perferendis 
+        iste explicabo veritatis error 
+        delectus vero hic molestias, quas adipisci architecto atque pariatur?
+       </pre>
+       <!-- liste, ul - unordered liste, ol - ordered liste, dl - definition liste -->
+       <h2>Voćni desert u čaši</h2>
+
+       <h3>Sastojci:</h3>
+       <ul type="circle">
+        <li>230 g kreme za kremšnite</li>
+        <li>500 ml hladnog mlijeka</li>
+        <li>3-4 žlice pekmeza od višanja</li>
+       </ul>
+       <h3>Priprema</h3>
+       <ol type="I" start="2">
+        <li>Prah za kremu pomiješati sa pola litre hladnog mlijeka te miksati 2-3 minute dok se ne dobije jednolična krema.</li>
+        <li>Pekmez od višanja rastopiti na blagoj vatri i ohladiti.</li>
+        <li>U desertne čaše rasporediti sloj pripremljene kreme pa žlicu i pol voćnog nadjeva te ponoviti još jednom postupak i završiti sa voćnim slojem. Posipati nasjeckanim pistacijem i staviti u hladnjak na hlađenje.</li>
+       </ol>
+
+       <h2>Definiton liste</h2>
+       <dl>
+        <dt>Struja</dt>
+        <dd>Usmjereno gibanje elektrona kroz vodič</dd>
+        <dt>Napon</dt>
+        <dd>Razlika potencijala između dvije točke</dd>
+       </dl>
+
+       <h2>Nested liste</h2>
+       <ul>
+        <li>A</li>
+        <li>B</li>
+        <ol>
+          <li>B1</li>
+          <li>B2</li>
+          <ul>
+            <li>B2a</li>
+            <ol>
+              <li>B2aa</li>
+              <li>B2ab</li>
+            </ol>
+            <li>B2b</li>
+            <li>B2c</li>
+          </ul>
+
+          <li>B3</li>
+          <ul>
+            <li>B31</li>
+            <li>B32</li>
+          </ul>
+        </ol>
+        <li>C</li>
+       </ul>
+       <!-- <small> <samp> <ims> <blockquote>-->
+        <p> 
+          Lorem <small>dolor sit amet</small>  consectetur <samp>adipisicing</samp> elit. 
+        Dolor ea <ims>necessitatibus</ims>  in 
+        accusantium rem sint aliquid perferendis 
+        iste explicabo veritatis error
+         <blockquote cite="https://www.huxley.net/bnw/four.html">
+    <p>
+      Words can be like X-rays, if you use them properly—they’ll go through
+      anything. You read and you’re pierced.
+        <details></details>  delectus vero hic molestias, quas adipisci architecto atque pariatur?
+        </p>
+
+        <ol type="I">
+          <li>Backgroundskills</li>
+          <ol type="A">
+            <li>Unix Commands</li>
+            <li>Vim text editor</li>
+          </ol>
+          <li>HTML</li>
+          <ol type="A">
+            <li>Minimal page</li>
+            <li>Headings</li>
+            <li>Tags</li>
+            <li>Lists</li>
+            <ol type="i">
+              <li>Unordered</li>
+              <li>Ordered</li>
+              <li>Definition</li>
+              <li>Nested</li>
+            </ol>
+            <li>Links</li>
+            <ol type="i">
+              <li>Absolute</li>
+              <li>Relative</li>
+            </ol>
+            <li>Images</li>
+          </ol>
+          <li>CSS</li>
+          <ol type="A">
+            <li>Anatomy</li>
+            <li>Basic Selectors</li>
+            <ol type="i">
+              <li>Elment</li>
+              <li>Class</li>
+              <li>ID</li>
+              <li>Group</li>
+            </ol>
+            <li>The DOM</li>
+            <li>Advanced Selectors</li>
+            <li>Box model</li>
+          </ol>
+          <li>Programing</li>
+          <ol type="A">
+            <li>Python</li>
+            <li>JavaScript</li>
+          </ol>
+          <li>Database</li>
+          <ol type="A">
+            <li>Flat File</li>
+            <li> Relational</li>
+          </ol>
+        </ul>
     </body>
 </html>
