--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <li> Relational</li>
           </ol>
         </ul>
-
+        <!-- Anchor elemet -->
         <h2> Anchor element</h2>
         <p>Web stranicu škole možete vidjeti <a href="http://tssb.hr/"  download="web-stranica">ovdje</a></p>
         <h3>My top 5 Favourite Websites</h3>
