--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>Skriptni jezici</title>
 </head>
 <body>
+  <h1>Zadaće:</h1>
+  <ol>
+    <li><a href="http://127.0.0.1:5500/Zadace/Zadaca1.html">Zadaca1</a></li>
+    <li></li>
+    <li></li>
+  </ol>
     <!-- heading elementi -->
      <h1>Naslov 1</h1>
      <h2>Naslov 2</h2>
@@ -185,6 +191,6 @@
          This is where you need to go:
          <a href="https://maps.app.goo.gl/wMnwLzHHa1GP6p3y7" target="_blank">google map link</a>
          <!--  -->
-         
+
          <body>
 </html>
