--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <h1>Zadaće:</h1>
   <ol>
-    <li><a href="http://127.0.0.1:5500/Zadace/Zadaca1.html">Zadaca1</a></li>
-    <li></li>
-    <li></li>
+    <li><a href="http://127.0.0.1:5500/Zadace/Zadaca1.html"target="_blank">Zadaća1</a></li>
+    <li><a href="http://127.0.0.1:5500/Zadace/Zadaca2.html"target="_blank">Zadaća2</a></li>
+    <li> <a href="http://127.0.0.1:5500/Zadace/Zadaca3.html"target="_blank">Zadaća3</a></li>
   </ol>
     <!-- heading elementi -->
      <h1>Naslov 1</h1>
@@ -162,7 +162,7 @@
         </ul>
         <!-- Anchor elemet -->
         <h2> Anchor element</h2>
-        <p>Web stranicu škole možete vidjeti <a href="http://tssb.hr/"  download="web-stranica">ovdje</a></p>
+        <p>Web stranicu škole možete vidjeti <a href="http://tssb.hr/" target="_blank" download="web-stranica">ovdje</a></p>
         <h3>My top 5 Favourite Websites</h3>
         <ol>
           <li><a href="https://www.hoyolab.com/circles/2/27/official?page_type=27&page_sort=hot" target="_blank">Hoyolab</a></li>
@@ -187,10 +187,140 @@
           <li>Apetit</li>
           <li>Balone</li>
          </ol>
-         
          This is where you need to go:
          <a href="https://maps.app.goo.gl/wMnwLzHHa1GP6p3y7" target="_blank">google map link</a>
-         <!--  -->
+         <!-- Tablice u HTML-u -->
+         <h2>Tablice u HTML-u</h2>
+         <table border="1">
+         <tr>
+          <th colspan="2">Ime i prezime</th>        <!-- table heading(podebljano) -->
+          <th>Razred</th>
+          </tr>
+          <tr>
+            <td>Marko</td> <!-- table data -->
+            <td>Bekić</td>
+            <td rowspan="3">3.E</td>
+          </tr>
+          <tr>
+            <td>Patrik</td>
+            <td>Jagodar</td>
+          </tr>
+          <tr>
+            <td>Ana</td>
+            <td>Čondić</td>
+          </tr>
+         </table>
 
+         <h1>Zadaci</h1>
+         <h3>Zadatak 1</h3>
+         <table border="1">
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+          <tr>
+            <td>Harry Depp</td>
+            <td>28</td>
+            <td>Britain</td>
+          </tr>
+          <tr>
+            <td>John Smith</td>
+            <td>35</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Rim Krishna</td>
+            <td>35</td>
+            <td>Nepal</td>
+          </tr>
+         </table>
+         <h3>zadatak 2</h3>
+         <table border="1">
+         <tr>
+          <th>S.N</th>
+          <th>Item</th>
+          <th>Quantity</th>
+         </tr>
+         <tr>
+            <td>1</td>
+            <td>Apple</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Mango</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Orange</td>
+            <td>1</td>
+          </tr>
+          <tr>
+            <td colspan="2">Total</td>
+            <td>5</td>
+          </tr>
+          </table>
+          <h3>zadatak 3</h3>
+          <table border="1">
+            <tr>
+              <th>Name</th>
+              <th>Subject</th>
+              <th>Marks</th>
+            </tr>
+            <tr>
+              <td rowspan="3">Mark Smith</td>
+              <td>English</td>
+              <td>67</td>
+            </tr>
+            <tr>
+              <td>Maths</td>
+              <td>82</td>
+            </tr>
+            <tr>
+              <td>Science</td>
+              <td>91</td>
+            </tr>
+          </table>
+          <h3>zadatak 4</h3>
+          <table border="1">
+            <tr>
+              <th>No.</th>
+              <th>Full Name</th>
+              <th>Position</th>
+              <th>Salary</th>
+              <th>Type</th>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>Bill Gates</td>
+              <td>Founder Microsoft</td>
+              <td> $1000</td>
+              <td rowspan="4">Company Founder</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Steve Jobs</td>
+              <td>Founder apple</td>
+              <td>$1200</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Larry Page</td>
+              <td> Founder Google</td>
+              <td>$1100</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>Mark Zuckeberg</td>
+              <td>Founder Facebook</td>
+              <td>$1300</td>
+            </tr>
+          </table>
+          <h3>zadatak 5</h3> <!-- napravi raspored sati -->
+          <table>
+
+          </table>
          <body>
 </html>
