--- a/Zadace/Zadaca2.html
+++ b/Zadace/Zadaca2.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Moja web stranica">
+  <meta charset="UTF-8">
+   <meta name="description" content="Moja web stranica">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Simun Bogdanovic">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skriptni jezici</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-    
+  
+</body>
+</html>
