--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <h1>Zadaće:</h1>
   <ol>
-    <li><a href="http://127.0.0.1:5500/Zadace/Zadaca1.html"target="_blank">Zadaća1</a></li>
-    <li><a href="http://127.0.0.1:5500/Zadace/Zadaca2.html"target="_blank">Zadaća2</a></li>
-    <li> <a href="http://127.0.0.1:5500/Zadace/Zadaca3.html"target="_blank">Zadaća3</a></li>
+    <li><a href="./Zadace/Zadaca1.html"target="_blank">Zadaća1</a></li>
+    <li><a href=""target="_blank">Zadaća2</a></li>
+    <li> <a href=""target="_blank">Zadaća3</a></li>
   </ol>
     <!-- heading elementi -->
      <h1>Naslov 1</h1>
