--- a/Zadace/index.html
+++ b/Zadace/index.html
@@ -11,9 +11,8 @@
 <body>
   <h1>Zadaće:</h1>
   <ol>
-    <li><a href="./Zadace/Zadaca1.html"target="_blank">Zadaća1</a></li>
-    <li><a href=""target="_blank">Zadaća2</a></li>
-    <li> <a href=""target="_blank">Zadaća3</a></li>
+    <li><a href="./Zadaca1.html"target="_blank">Zadaća1</a></li>
+    <li><a href=""></a></li>
   </ol>
     <!-- heading elementi -->
      <h1>Naslov 1</h1>
