--- a/Zadace/Zadaca1.html
+++ b/Zadace/Zadaca1.html
@@ -28,7 +28,7 @@
   </ol>
   <a href="https://www.coolinarika.com/" target="_blank">Coolinarika</a>
   <br><br>
-  <a href="./index.html" target="_blank">Skriptni jezici</a>
+  <a href="/index.html" target="_blank">Skriptni jezici</a>
   <br>
 
   <img src="https://piovariations.cdn.podravka.net/4bbc7036-a776-11f0-bbde-4e6d032466a9/v/f2b1f6a6-64bc-11eb-b6c2-0242ac130010/1600x1200-f2b21938-64bc-11eb-9498-0242ac130010.jpeg" alt="Kakao banana kuglice" width="500">
