--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Zadaće:</h1>
   <ol>
-    <li><a href="./Zadaca1.html"target="_blank">Zadaća1</a></li>
+    <li><a href="/Zadace/Zadaca1.html"target="_blank">Zadaća1</a></li>
     <li><a href=""></a></li>
   </ol>
     <!-- heading elementi -->
