--- a/Motivation_Meme_Project/index.html
+++ b/Motivation_Meme_Project/index.html
@@ -5,10 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
-  <img src="https://miro.medium.com/0*ZjYSm_q36J4KChdn" alt="this is fine">
-  <h1></h1>
+  <div>
+    <img src="https://miro.medium.com/0*ZjYSm_q36J4KChdn" alt="this is fine">
+  <h1>Ono kad</h1>
+  <p>Imaš test na ponedjeljak prvi sat prvom smjenom</p>
+  </div>
 </body>
 </html>
 <!-- 
